[Update] Update tests to class VMOSDiskSize

--- a/src/azure-cli/azure/cli/command_modules/vm/tests/latest/recordings/test_vm_usage.yaml
+++ b/src/azure-cli/azure/cli/command_modules/vm/tests/latest/recordings/test_vm_usage.yaml
@@ -13,7 +13,7 @@ interactions:
       ParameterSetName:
       - --location
       User-Agent:
-      - AZURECLI/2.46.0 azsdk-python-azure-mgmt-compute/29.1.0 Python/3.10.9 (Windows-10-10.0.22621-SP0)
+      - AZURECLI/2.47.0 azsdk-python-azure-mgmt-compute/29.1.0 Python/3.10.8 (Windows-10-10.0.22624-SP0)
     method: GET
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Compute/locations/westus/usages?api-version=2022-11-01
   response:
@@ -22,13 +22,13 @@ interactions:
         unit\": \"Count\",\r\n      \"currentValue\": 0,\r\n      \"name\": {\r\n\
         \        \"value\": \"availabilitySets\",\r\n        \"localizedValue\": \"\
         Availability Sets\"\r\n      }\r\n    },\r\n    {\r\n      \"limit\": 100,\r\
-        \n      \"unit\": \"Count\",\r\n      \"currentValue\": 4,\r\n      \"name\"\
+        \n      \"unit\": \"Count\",\r\n      \"currentValue\": 3,\r\n      \"name\"\
         : {\r\n        \"value\": \"cores\",\r\n        \"localizedValue\": \"Total\
         \ Regional vCPUs\"\r\n      }\r\n    },\r\n    {\r\n      \"limit\": 25000,\r\
-        \n      \"unit\": \"Count\",\r\n      \"currentValue\": 2,\r\n      \"name\"\
+        \n      \"unit\": \"Count\",\r\n      \"currentValue\": 3,\r\n      \"name\"\
         : {\r\n        \"value\": \"virtualMachines\",\r\n        \"localizedValue\"\
         : \"Virtual Machines\"\r\n      }\r\n    },\r\n    {\r\n      \"limit\": 2500,\r\
-        \n      \"unit\": \"Count\",\r\n      \"currentValue\": 1,\r\n      \"name\"\
+        \n      \"unit\": \"Count\",\r\n      \"currentValue\": 0,\r\n      \"name\"\
         : {\r\n        \"value\": \"virtualMachineScaleSets\",\r\n        \"localizedValue\"\
         : \"Virtual Machine Scale Sets\"\r\n      }\r\n    },\r\n    {\r\n      \"\
         limit\": 3000,\r\n      \"unit\": \"Count\",\r\n      \"currentValue\": 0,\r\
@@ -42,16 +42,16 @@ interactions:
         \        \"localizedValue\": \"Total Regional Low-priority vCPUs\"\r\n   \
         \   }\r\n    },\r\n    {\r\n      \"limit\": 100,\r\n      \"unit\": \"Count\"\
         ,\r\n      \"currentValue\": 0,\r\n      \"name\": {\r\n        \"value\"\
-        : \"standardDSv2Family\",\r\n        \"localizedValue\": \"Standard DSv2 Family\
+        : \"standardDv2Family\",\r\n        \"localizedValue\": \"Standard Dv2 Family\
         \ vCPUs\"\r\n      }\r\n    },\r\n    {\r\n      \"limit\": 100,\r\n     \
-        \ \"unit\": \"Count\",\r\n      \"currentValue\": 4,\r\n      \"name\": {\r\
+        \ \"unit\": \"Count\",\r\n      \"currentValue\": 0,\r\n      \"name\": {\r\
         \n        \"value\": \"standardDSv3Family\",\r\n        \"localizedValue\"\
         : \"Standard DSv3 Family vCPUs\"\r\n      }\r\n    },\r\n    {\r\n      \"\
-        limit\": 100,\r\n      \"unit\": \"Count\",\r\n      \"currentValue\": 0,\r\
-        \n      \"name\": {\r\n        \"value\": \"standardDv2Family\",\r\n     \
-        \   \"localizedValue\": \"Standard Dv2 Family vCPUs\"\r\n      }\r\n    },\r\
-        \n    {\r\n      \"limit\": 100,\r\n      \"unit\": \"Count\",\r\n      \"\
-        currentValue\": 0,\r\n      \"name\": {\r\n        \"value\": \"standardDSFamily\"\
+        limit\": 100,\r\n      \"unit\": \"Count\",\r\n      \"currentValue\": 3,\r\
+        \n      \"name\": {\r\n        \"value\": \"standardDSv2Family\",\r\n    \
+        \    \"localizedValue\": \"Standard DSv2 Family vCPUs\"\r\n      }\r\n   \
+        \ },\r\n    {\r\n      \"limit\": 100,\r\n      \"unit\": \"Count\",\r\n \
+        \     \"currentValue\": 0,\r\n      \"name\": {\r\n        \"value\": \"standardDSFamily\"\
         ,\r\n        \"localizedValue\": \"Standard DS Family vCPUs\"\r\n      }\r\
         \n    },\r\n    {\r\n      \"limit\": 100,\r\n      \"unit\": \"Count\",\r\
         \n      \"currentValue\": 0,\r\n      \"name\": {\r\n        \"value\": \"\
@@ -409,30 +409,37 @@ interactions:
         \      \"unit\": \"Count\",\r\n      \"currentValue\": 0,\r\n      \"name\"\
         : {\r\n        \"value\": \"StandardNCADSA10v4Family\",\r\n        \"localizedValue\"\
         : \"Standard NCADSA10v4 Family vCPUs\"\r\n      }\r\n    },\r\n    {\r\n \
-        \     \"limit\": 50000,\r\n      \"unit\": \"Count\",\r\n      \"currentValue\"\
-        : 2,\r\n      \"name\": {\r\n        \"value\": \"StandardDiskCount\",\r\n\
-        \        \"localizedValue\": \"Standard Storage Managed Disks\"\r\n      }\r\
-        \n    },\r\n    {\r\n      \"limit\": 50000,\r\n      \"unit\": \"Count\"\
-        ,\r\n      \"currentValue\": 24,\r\n      \"name\": {\r\n        \"value\"\
-        : \"PremiumDiskCount\",\r\n        \"localizedValue\": \"Premium Storage Managed\
-        \ Disks\"\r\n      }\r\n    },\r\n    {\r\n      \"limit\": 50000,\r\n   \
-        \   \"unit\": \"Count\",\r\n      \"currentValue\": 0,\r\n      \"name\":\
-        \ {\r\n        \"value\": \"StandardSSDDiskCount\",\r\n        \"localizedValue\"\
-        : \"StandardSSDStorageDisks\"\r\n      }\r\n    },\r\n    {\r\n      \"limit\"\
-        : 50000,\r\n      \"unit\": \"Count\",\r\n      \"currentValue\": 0,\r\n \
-        \     \"name\": {\r\n        \"value\": \"StandardSSDZRSDiskCount\",\r\n \
-        \       \"localizedValue\": \"StandardSSDZRSStorageDisks\"\r\n      }\r\n\
-        \    },\r\n    {\r\n      \"limit\": 50000,\r\n      \"unit\": \"Count\",\r\
-        \n      \"currentValue\": 0,\r\n      \"name\": {\r\n        \"value\": \"\
-        PremiumZRSDiskCount\",\r\n        \"localizedValue\": \"PremiumZRSStorageDisks\"\
-        \r\n      }\r\n    },\r\n    {\r\n      \"limit\": 1000,\r\n      \"unit\"\
+        \     \"limit\": 0,\r\n      \"unit\": \"Count\",\r\n      \"currentValue\"\
+        : 0,\r\n      \"name\": {\r\n        \"value\": \"standardHBv4Family\",\r\n\
+        \        \"localizedValue\": \"Standard HBv4 Family vCPUs\"\r\n      }\r\n\
+        \    },\r\n    {\r\n      \"limit\": 0,\r\n      \"unit\": \"Count\",\r\n\
+        \      \"currentValue\": 0,\r\n      \"name\": {\r\n        \"value\": \"\
+        standardHXFamily\",\r\n        \"localizedValue\": \"Standard HX Family vCPUs\"\
+        \r\n      }\r\n    },\r\n    {\r\n      \"limit\": 50000,\r\n      \"unit\"\
         : \"Count\",\r\n      \"currentValue\": 0,\r\n      \"name\": {\r\n      \
-        \  \"value\": \"UltraSSDDiskCount\",\r\n        \"localizedValue\": \"UltraSSDStorageDisks\"\
-        \r\n      }\r\n    },\r\n    {\r\n      \"limit\": 1000,\r\n      \"unit\"\
+        \  \"value\": \"StandardDiskCount\",\r\n        \"localizedValue\": \"Standard\
+        \ Storage Managed Disks\"\r\n      }\r\n    },\r\n    {\r\n      \"limit\"\
+        : 50000,\r\n      \"unit\": \"Count\",\r\n      \"currentValue\": 28,\r\n\
+        \      \"name\": {\r\n        \"value\": \"PremiumDiskCount\",\r\n       \
+        \ \"localizedValue\": \"Premium Storage Managed Disks\"\r\n      }\r\n   \
+        \ },\r\n    {\r\n      \"limit\": 50000,\r\n      \"unit\": \"Count\",\r\n\
+        \      \"currentValue\": 0,\r\n      \"name\": {\r\n        \"value\": \"\
+        StandardSSDDiskCount\",\r\n        \"localizedValue\": \"StandardSSDStorageDisks\"\
+        \r\n      }\r\n    },\r\n    {\r\n      \"limit\": 50000,\r\n      \"unit\"\
         : \"Count\",\r\n      \"currentValue\": 0,\r\n      \"name\": {\r\n      \
-        \  \"value\": \"PremiumV2DiskCount\",\r\n        \"localizedValue\": \"PremiumV2StorageDisks\"\
+        \  \"value\": \"StandardSSDZRSDiskCount\",\r\n        \"localizedValue\":\
+        \ \"StandardSSDZRSStorageDisks\"\r\n      }\r\n    },\r\n    {\r\n      \"\
+        limit\": 50000,\r\n      \"unit\": \"Count\",\r\n      \"currentValue\": 0,\r\
+        \n      \"name\": {\r\n        \"value\": \"PremiumZRSDiskCount\",\r\n   \
+        \     \"localizedValue\": \"PremiumZRSStorageDisks\"\r\n      }\r\n    },\r\
+        \n    {\r\n      \"limit\": 1000,\r\n      \"unit\": \"Count\",\r\n      \"\
+        currentValue\": 0,\r\n      \"name\": {\r\n        \"value\": \"UltraSSDDiskCount\"\
+        ,\r\n        \"localizedValue\": \"UltraSSDStorageDisks\"\r\n      }\r\n \
+        \   },\r\n    {\r\n      \"limit\": 1000,\r\n      \"unit\": \"Count\",\r\n\
+        \      \"currentValue\": 0,\r\n      \"name\": {\r\n        \"value\": \"\
+        PremiumV2DiskCount\",\r\n        \"localizedValue\": \"PremiumV2StorageDisks\"\
         \r\n      }\r\n    },\r\n    {\r\n      \"limit\": 75000,\r\n      \"unit\"\
-        : \"Count\",\r\n      \"currentValue\": 1,\r\n      \"name\": {\r\n      \
+        : \"Count\",\r\n      \"currentValue\": 3,\r\n      \"name\": {\r\n      \
         \  \"value\": \"StandardSnapshotCount\",\r\n        \"localizedValue\": \"\
         StandardStorageSnapshots\"\r\n      }\r\n    },\r\n    {\r\n      \"limit\"\
         : 75000,\r\n      \"unit\": \"Count\",\r\n      \"currentValue\": 0,\r\n \
@@ -471,11 +478,11 @@ interactions:
       cache-control:
       - no-cache
       content-length:
-      - '28629'
+      - '29037'
       content-type:
       - application/json; charset=utf-8
       date:
-      - Fri, 17 Mar 2023 04:25:11 GMT
+      - Thu, 06 Apr 2023 06:43:17 GMT
       expires:
       - '-1'
       pragma:
